--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import 'modules/_navbar';
 @import 'modules/_lightbox';
 
+html { overflow: auto; }
 
 main {
     width: 100%;
@@ -18,7 +19,7 @@ main {
 
 .line{
     margin: 0 auto;
-    padding-top: 30px;
+    padding-top: 40px;
     text-align: center;
     font-size: 2em;
     font-family: 'Nunito', Arial, Helvetica, sans-serif;
@@ -64,7 +65,7 @@ main {
 
 #about {
     //width: 100%;
-    height: 100vh;
+    height: 85vh;
 
     #sujin {
         margin: 40px 80px 0 50px;
@@ -77,7 +78,7 @@ main {
     }
 
     .aboutme {
-        margin-top: 40px;
+        margin-top: 60px;
         width: 86%;
         //height: 55vh;
         text-align: left;
@@ -85,11 +86,49 @@ main {
         font-family: 'Nunito', Arial, Helvetica, sans-serif;
         line-height: 1.8em;
     }
+
+    .list {
+        margin: 40px 20px;
+        width: 700px;
+        display: flex;
+        justify-content:  space-between;
+        
+
+        .skills {
+            font-family: 'Nunito', Arial, Helvetica, sans-serif;
+
+            h2 {
+                font-size: 1.5em;
+                font-weight: bold;
+                margin-bottom: 10px;
+            }
+
+            p {
+                font-size: 1.2em;
+                font-weight: lighter;
+                line-height: 1.5em;
+                text-align: left;
+            }
+        }
+    }
+
+   .name {
+        text-align: center;
+        font-family: 'Nunito';
+        font-weight: bold;
+        font-size: 1.3em;
+        float: left;
+        margin: 0 0 0 40px;
+        padding: 0 0 0 30px;
+        line-height: 2em;
+   }
 }
+
+@import 'modules/_work';
 
 #contact {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     
     #form {
         width: 70%;
@@ -112,7 +151,7 @@ main {
     
         textarea {
             width: 100%;
-            height: 160px;
+            height: 120px;
             margin-top: 30px;
             padding: 5px;
             border-bottom: 2px;
@@ -132,7 +171,7 @@ main {
             font-family: 'Nunito', Arial, Helvetica, sans-serif;
             border: 1px solid $text;
             border-radius: 20px;
-            margin-top: 80px;
+            margin-top: 30px;
             transition: .3s;
             &:hover{
               transform: scale(1.01);
