--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,41 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Mali|Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Mali&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.ico">
-    <title>Sujin Lee</title>
+    <title>Sujin Lee | Designer & Front-end developer</title>
 </head>
 
 <body>
     <main>
         <header id="mainHeader">
+            <h1 class="hidden">Main Header</h1>
+            <div id="mobileNavFiller"></div>
             <a href="#home"><img src="images/logo.svg" alt="sujinlogo" id="logo"></a>
+
+            <button id="burger"></button>
             <nav data-module="nav" id="mainNav">
+                <h2 class="hidden">Main Navigation</h2>
+                <div class="hidden" id="burgerMenu"><i class="fas fa-bars"></i></div>
                     <ul>
-                        <li><a href="#home" class="nav-item">Home</a></li>
-                        <li><a href="#about" class="nav-item">About</a></li>
-                        <li><a href="#work" class="nav-item">Work</a></li>
-                        <li><a href="#contact" class="nav-item">Contact</a></li>
+                        <li><a href="#home" id="home-nav">Home</a></li>
+                        <li><a href="#about" id="about-nav">About</a></li>
+                        <li><a href="#work" id="work-nav">Work</a></li>
+                        <li><a href="#contact" id="contact-nav">Contact</a></li>
                     </ul>
             </nav>
         </header>
 
         {{{ body }}}
+    
+        <footer id="mainFooter">
+            <h1 class="hidden">Main Footer</h1>
+            <ul>
+                <li><a href="https://www.instagram.com/sujin_l2e.98/" id="instagram"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/sujinl2e98" id="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/sujinlee39" id="github"><i class="fab fa-github"></i></a></li>
+            </ul>
+            <p>© 2019 All Rights Reserved</p>
+        </footer>
     </main>
-
-    <footer id="mainFooter">
-        <ul>
-            <li><a href="https://www.instagram.com/sujin_l2e.98/" class="nav-item"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/sujinl2e98" class="nav-item"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://github.com/sujinlee39" class="nav-item"><i class="fab fa-github"></i></a></li>
-        </ul>
-        <p>© 2019 All Rights Reserved</p>
-    </footer>
-
-    {{!-- <a id="to-top" href="#" class="nav-item">Back to top</a> --}}
 
     <script type="module" src="js/main.js"></script>
 </body>
