--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,7 +13,7 @@
    <h2>Sujin Lee</h2>
    <h3>Designer & Front-end developer</h3>
 
-    <p class="aboutme">I’m 21 years old, study interactive media design at Fanshawe College. As myself, did not have a coding background but still learning to code. Along with my design skills. I’m into web design, UX/UI, and motion as well. Trying to do new things all the time. Always, wondering and dreaming.</p>
+    <p class="aboutme">I’m 21 years old, study interactive media design at Fanshawe College. I did not have a coding background but still learning to code. Along with my design skills. I’m into web design, UX/UI, and motion as well. Trying to do new things all the time. Always, wondering and dreaming.</p>
 
     <div class="list"> 
         <h2 class="hidden">Skills</h2>
