--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,16 +2,20 @@
     <h2 class="hidden">Home Page</h2>
     <div class="mainB"></div>
     <div id="b-text">
-    <h2>Wondering about the new place</h2>
-    <h3>Creatively & Dream & Goals</h3>
+    <h2 class="headingT">Wondering about the new place</h2>
+    <h3 class="headingT">Creatively & Dream & Goals</h3>
     </div>
 </section>
 
+
+
+<hr>
 <section id="about" class="panel">
-    <h2 class="line">About</h2>
+    <h2>About</h2>
+    <span class="line"></span>
     <img src="images/sujin.jpg" alt="photo of myself" id="sujin">
-   <h2>Sujin Lee</h2>
-   <h3>Designer & Front-end developer</h3>
+    <h2>Sujin Lee</h2>
+    <h3>Designer & Front-end developer</h3>
 
     <p class="aboutme">I’m 21 years old, study interactive media design at Fanshawe College. I did not have a coding background but still learning to code. Along with my design skills. I’m into web design, UX/UI, and motion as well. Trying to do new things all the time. Always, wondering and dreaming.</p>
 
@@ -44,9 +48,10 @@
     </div>
 
 </section>
-
+<hr>
 <section id="work" class="panel">
-    <h2 class="line">Work</h2>
+    <h2>Work</h2>
+    <span class="line"></span>
     <h3>Please check out my previous works</h3>
     <p>Design, Front-end, 3D motion, and video</p>
     <div class="w-data">
@@ -83,9 +88,10 @@
     <!-- render the database content here -->
         </div>
     </section>
-
+<hr>
 <section id="contact" class="panel">
-    <h2 class="line">Contact</h2>
+    <h2>Contact</h2>
+    <span class="line"></span>
     <div id="form">
         <form id="touch" action="contact" method="post">
             <input placeholder="Name*" type="text">
