--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,10 +16,11 @@
 
 <body>
     <main>
-        <header id="mainHeader">
+        <header>
             <h1 class="hidden">Main Header</h1>
-            <div id="mobileNavFiller"></div>
-            <a href="#home"><img src="images/logo.svg" alt="sujinlogo" id="logo"></a>
+            <div id="mobileNavCon"></div>
+
+            <div class="logoL"><a href="#home"><img src="images/logo.svg" alt="sujinlogo"></a></div>
 
             <button id="burger"></button>
             <nav data-module="nav" id="mainNav">
