--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,135 +4,53 @@
 
 html { overflow: auto; }
 
+.hidden { display: $hidden; }
+
 main {
     width: 100%;
     overflow: hidden;
-    background-color: $bg-color;
-    font-family: Arial, Helvetica, sans-serif;
-
-    @media screen and (min-width: 640px){
-        font-family: Arial, Helvetica, sans-serif;
-    }
-}
-
-.hidden { display: $hidden; }
-
-.line{
-    margin: 0 auto;
-    padding-top: 40px;
-    text-align: center;
-    font-size: 2em;
+    background-color: $main-color;
     font-family: 'Nunito', Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    padding-bottom: 2px;
-    border-bottom: 4px $underline;
-    width: 8%;
-    text-align: center;
-    border-style: dotted;
 }
 
-#home {
-    width: 100%;
-    height: 100vh;
 
-    .mainB {
-        width: 100%;
-        height: 100vh;
-        background-image: url("../images/bg.jpg");
-        background-position: bottom;
-        background-size: cover;
-        position: absolute;
-    }
+@import 'modules/_home';
 
-    #b-text {
-        position: relative;
-        top: 45%;
-        left: 0;
-        right: 0;
-        z-index: 2;
-        
-        h2, h3 {
-            text-align: center;
-            color: $bg-color;
-            font-size: 3em;
-            letter-spacing: 3px;
-            line-height: 1.25em;
-            font-family: 'Mali', cursive, Arial, Helvetica, sans-serif;
-            font-weight: bold;
-        }
-    }
-}
-
-#about {
-    //width: 100%;
-    height: 85vh;
-
-    #sujin {
-        margin: 40px 80px 0 50px;
-        float: left;
-        width: 340px;
-        height: 450px;
-        border-radius: 20px;
-        object-position: center;
-        object-fit: cover;
-    }
-
-    .aboutme {
-        margin-top: 60px;
-        width: 86%;
-        //height: 55vh;
-        text-align: left;
-        font-size: 1.3em;
-        font-family: 'Nunito', Arial, Helvetica, sans-serif;
-        line-height: 1.8em;
-    }
-
-    .list {
-        margin: 40px 20px;
-        width: 700px;
-        display: flex;
-        justify-content:  space-between;
-        
-
-        .skills {
-            font-family: 'Nunito', Arial, Helvetica, sans-serif;
-
-            h2 {
-                font-size: 1.5em;
-                font-weight: bold;
-                margin-bottom: 10px;
-            }
-
-            p {
-                font-size: 1.2em;
-                font-weight: lighter;
-                line-height: 1.5em;
-                text-align: left;
-            }
-        }
-    }
-
-   .name {
-        text-align: center;
-        font-family: 'Nunito';
-        font-weight: bold;
-        font-size: 1.3em;
-        float: left;
-        margin: 0 0 0 40px;
-        padding: 0 0 0 30px;
-        line-height: 2em;
-   }
-}
+@import 'modules/_about';
 
 @import 'modules/_work';
 
+hr {
+    margin: 20px;
+    border: 2px solid $hr;
+    border-radius: 4px;
+}
+
+.line {
+    display: block;
+    border-bottom: 5px #E95842;
+    border-style: dotted;
+    width: 22%;
+    margin: 0 auto;
+    padding-top: 10px;
+}
+
+
+//contactform mobile-first
 #contact {
     width: 100%;
-    height: 80vh;
+    height: 85vh;
+
+    h2 {
+        margin: 40px 40px 0 40px;
+        text-align: center;
+        font-size: 1.8em;
+    }
     
     #form {
         width: 70%;
         margin: 0 auto;
+        padding: 20px;
         text-align: center;
         }
     
@@ -171,7 +89,7 @@ main {
             font-family: 'Nunito', Arial, Helvetica, sans-serif;
             border: 1px solid $text;
             border-radius: 20px;
-            margin-top: 30px;
+            margin-top: 35px;
             transition: .3s;
             &:hover{
               transform: scale(1.01);
