--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Mali&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css>
-     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.ico">
+     <link rel="icon" type="image/ico" sizes="16x16" href="images/favicon.ico">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Sujin Lee | Designer & Front-end developer</title>
