--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,13 +9,13 @@
 
 <hr>
 <section id="about" class="panel">
-    <h2>About</h2>
+    <h2 class="heading">About</h2>
     <span class="line"></span>
-    <img src="images/sujin.jpg" alt="photo of myself" id="sujin">
-    <h2>Sujin Lee</h2>
+    <img src="images/sujin.jpg" alt="photo of myself">
+    <h2 class="name">Sujin Lee</h2>
     <h3>Designer & Front-end developer</h3>
 
-    <p class="aboutme">I’m 21 years old, study interactive media design at Fanshawe College. I did not have a coding background but still learning to code. Along with my design skills. I’m into web design, UX/UI, and motion as well. Trying to do new things all the time. Always, wondering and dreaming.</p>
+    <p class="aboutP">I’m 21 years old, study interactive media design at Fanshawe College. I did not have a coding background but still learning to code. Along with my design skills. I’m into web design, UX/UI, and motion as well. Trying to do new things all the time. Always, wondering and dreaming.</p>
 
     <div class="list"> 
         <h2 class="hidden">Skills</h2>
@@ -48,7 +48,7 @@
 </section>
 <hr>
 <section id="work" class="panel">
-    <h2>Work</h2>
+    <h2 class="heading">Work</h2>
     <span class="line"></span>
     <h3>Please check out my previous works</h3>
     <p>Design, Front-end, 3D motion, and video</p>
@@ -88,7 +88,7 @@
     </section>
 <hr>
 <section id="contact" class="panel">
-    <h2>Contact</h2>
+    <h2 class="heading">Contact</h2>
     <span class="line"></span>
     <div id="form">
         <form id="touch" action="contact" method="post">
