--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,13 +26,41 @@ hr {
     border-radius: 4px;
 }
 
+.heading {
+    margin: 40px 40px 0 40px;
+    text-align: center;
+    font-size: 1.8em;
+    font-weight: bold;
+}
+
 .line {
     display: block;
     border-bottom: 5px #E95842;
     border-style: dotted;
-    width: 22%;
+    width: 20%;
     margin: 0 auto;
     padding-top: 10px;
+}
+
+@media only screen and (min-width: 601px) {
+    
+    .line {
+        width: 15%;
+    }
+}
+
+@media only screen and (min-width: 801px) {
+    
+    .line {
+        width: 10%;
+    }
+}
+
+@media only screen and (min-width: 1201px) {
+    
+    .line {
+        width: 8%;
+    }
 }
 
 
@@ -40,12 +68,6 @@ hr {
 #contact {
     width: 100%;
     height: 85vh;
-
-    h2 {
-        margin: 40px 40px 0 40px;
-        text-align: center;
-        font-size: 1.8em;
-    }
     
     #form {
         width: 70%;
