--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -1,61 +1,73 @@
+#about {
+    height: 110vh;
 
-// #about {
-//     //width: 100%;
-//     height: 85vh;
+    .name {
+        margin: 40px 40px 0 40px;
+        text-align: center;
+        font-size: 1.8em;
+        font-weight: bold;
+    }
 
-//     #sujin {
-//         margin: 40px 80px 0 50px;
-//         float: left;
-//         width: 340px;
-//         height: 450px;
-//         border-radius: 20px;
-//         object-position: center;
-//         object-fit: cover;
-//     }
+    h3 {
+        margin-top: 20px;
+        text-align: center;
+        font-size: 1em;
+        font-weight: bold;
+    }
 
-//     .aboutme {
-//         margin-top: 60px;
-//         width: 86%;
-//         //height: 55vh;
-//         text-align: left;
-//         font-size: 1.3em;
-//         font-family: 'Nunito', Arial, Helvetica, sans-serif;
-//         line-height: 1.8em;
-//     }
+   img {
+        width: 70%;
+        height: 450px;
+        border-radius: 20px;
+        object-position: center;
+        object-fit: cover;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 40px;
+        display: block;
+    }
 
-//     .list {
-//         margin: 40px 20px;
-//         width: 700px;
-//         display: flex;
-//         justify-content:  space-between;
+    .aboutP {
+        width: 88%;
+        text-align: left;
+        font-size: 1.1em;
+        line-height: 1.8em;
+        margin: 32px;
+    }
+}
+
+ .list {
+        margin: 0 auto;
+        width: 600px;
+        display: flex;
+        justify-content:  space-between;
         
 
-//         .skills {
-//             font-family: 'Nunito', Arial, Helvetica, sans-serif;
+        .skills {
 
-//             h2 {
-//                 font-size: 1.5em;
-//                 font-weight: bold;
-//                 margin-bottom: 10px;
-//             }
+            h2 {
+                font-size: 1.5em;
+                font-weight: bold;
+                margin-bottom: 10px;
+            }
 
-//             p {
-//                 font-size: 1.2em;
-//                 font-weight: lighter;
-//                 line-height: 1.5em;
-//                 text-align: left;
-//             }
-//         }
-//     }
+            p {
+                font-size: 1.1em;
+                font-weight: lighter;
+                line-height: 1.5em;
+                text-align: left;
+            }
+        }
+    }
 
-//    .name {
-//         text-align: center;
-//         font-family: 'Nunito';
-//         font-weight: bold;
-//         font-size: 1.3em;
-//         float: left;
-//         margin: 0 0 0 40px;
-//         padding: 0 0 0 30px;
-//         line-height: 2em;
-//    }
-// }
+    @media only screen and (max-width: 700px) {
+        .list { display: $hidden; }
+    }
+
+    @media only screen and (min-width: 701px) {
+        #about { height: 135vh; }
+    }
+
+    @media only screen and (min-width: 844px) {
+        #about { height: 130vh; }
+    }
