--- a/sass/modules/_work.scss
+++ b/sass/modules/_work.scss
@@ -1,3 +1,5 @@
+
+
 #work{
     margin: 0 auto;
     width: 100%;
@@ -9,38 +11,33 @@
     h3, p {
         text-align: center;
         font-size: 1.2em;
-        font-family: 'Nunito', Arial, Helvetica, sans-serif;
         line-height: 1.3em;
     }
 
     .w-data {
-        margin-left: 15px;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
 
         .work-panel {
-            margin: 20px;
+            margin: 0 auto;
 
-            .w-link {
-                position: relative;
-                z-index: 1;
-            }
-                .thumb {
-                    width: 640px;
-                    height: 400px;
-                    float: left;
-                    overflow: hidden;
-                    margin: 20px;
-                    z-index: -1;
-                }
+              .thumb {
+                  width: 430px;
+                  height: 260px;
+                  margin: 20px 10px 0 10px
+              }
         }
     }
-   
-
 
     #videoContainer {
         display: block;
         position: relative;
         width: 90%;
         margin: 0 auto;
+        margin-bottom: 40px;
         height: auto;
         &:hover .video-controls{opacity: .6;}
 
@@ -79,7 +76,6 @@
             img {
               width: inherit;
               height: inherit;
-              &:hover { background: rgb(255, 69, 13); border-radius: 5px;}
             }
           }
 
@@ -89,7 +85,7 @@
 
           #vol {width: 18%; justify-content: flex-start;}
 
-          #progress-bar {width: 55%; justify-content: flex-start;}
+          #progress-bar {width: 50%; justify-content: flex-start;}
 
           input {margin:0; height: 40px; padding: 0; border: none;}
 
@@ -102,8 +98,8 @@
             height: 12px;
             width: 12px;
             border-radius: 100%;
-            background-color:  rgba(255, 69, 13, 1);
-            border: 2px solid rgba(0,0,0,1);
+            background-color:  rgb(255, 255, 255);
+            border: 2px solid rgb(255, 255, 255);
             cursor: pointer;
           }
 
@@ -112,8 +108,8 @@
             height: 12px;
             width: 12px;
             border-radius: 100%;
-            background-color:  rgba(255, 69, 13, 1);
-            border: 2px solid rgba(0,0,0,1);
+            background-color:  rgb(255, 255, 255);
+            border: 2px solid rgb(255, 255, 255);
             cursor: pointer;
           }
 
@@ -122,18 +118,37 @@
 
           input[type=range]::-webkit-slider-runnable-track {
             height: 10px;
-            background-color: darkgrey;
+            background-color: $blue;
             border-radius: 5px;
             cursor: pointer;
           }
 
           input[type=range]::-moz-range-track{
             height: 10px;
-            background-color: darkgrey;
+            background-color: $blue;
             border-radius: 5px;
             cursor: pointer;
           }
 
         }
     }
+}
+
+@media only screen and (min-width: 701px) {
+  #work {
+  .w-data {
+    width: 100%;
+    height: 100%;
+    
+      .work-panel {
+          margin: 0 auto;
+
+            .thumb {
+              width: 630px;
+              height: 400px;
+              margin: 20px 10px 10px 10px;
+            }
+      }
+  }
+}
 }
