--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -71,3 +71,18 @@
     @media only screen and (min-width: 844px) {
         #about { height: 130vh; }
     }
+
+    @media only screen and (min-width: 1024px) {
+      #about {
+        .aboutP {
+            width: 60%;
+            text-align: left;
+            font-size: 1.1em;
+            line-height: 1.8em;
+            margin: 0 auto;
+            margin-top: 30px;
+            margin-bottom: 40px;
+        }
+      }
+    
+    }
