--- a/sass/modules/_lightbox.scss
+++ b/sass/modules/_lightbox.scss
@@ -1,136 +1,209 @@
 
-@media screen and (min-width: 300px) and (max-width: 599px) {
+@media screen and (max-width: 700px) {
     .lightbox { 
-            display: none;
-            flex-direction: row;
-            min-height: 100vh;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            z-index: 5000;
-            padding: 20px;
-            background-color: tan;
+        display: none;
+        flex-direction: row;
+        min-height: 80vh;
+        width: 80%;
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        z-index: 5000;
+        padding: 20px;
+        background-color: rgba(233, 169, 95, 0.98);
+        border-radius: 20px;
+
+            h3 {
+                text-align: left;
+                font-size: 1.2em;
+                line-height: 1.5em;
+                font-weight: bold;
+            }
     
             p {
                 text-align: left;
-                font-size: 0.8em;
-                width: 80%;
-                line-height: 1.5em;
+                font-size: 1em;
+                line-height: 1.7em;
                 }
         
             .sidebar {
-                flex: auto;
+                margin: 0 auto;
+                height: 25vh;
             }
             
             .lb-content {
                 position: absolute;
-                flex: auto;
                 top: 35%;
-                left: 25%;
+                width: 90%;
             }
     
         img { 
-            max-width: 220px;
-            margin: 40px 0 0 40px;
+            max-width: 300px;
+            border-radius: 10px;
         }
     
         .close {    
-            right: 24px;
-            top: 10px;
+            right: 65px;
+            top: 25px;
             cursor: pointer;
             font-size: 2em;
             position: fixed;
-            font-family: 'Mali', Arial, Helvetica, sans-serif;
             color: snow;
+            transition: all .2s ease-in-out;
+            &:hover {
+                cursor: pointer; transform: scale(1.5);
+              }
         }
     }  
     }
     
     .show-lb { display: flex !important; }
+
+    .w-tools {
+        li { 
+            display: inline-block;
+            padding: 5px;
+            font-size: 0.8em;
+            margin-bottom: 8px;
+        }
+    }
     
     
-    @media screen and (min-width: 600px) and (max-width: 899px){
+    @media screen and (min-width: 701px) and (max-width: 950px){
     
         .lightbox { 
             display: none;
             flex-direction: row;
-            min-height: 100vh;
-            width: 100%;
+            min-height: 90vh;
+            width: 90%;
             position: fixed;
-            top: 0;
+            top: 20px;
+            left: 15px;
             z-index: 5000;
             padding: 20px;
-            background-color: tan;
+            background-color: rgba(233, 169, 95, 0.98);
+            border-radius: 20px;
     
             
+            h3 {
+                text-align: left;
+                font-size: 1.2em;
+                line-height: 1.4em;
+                font-weight: bold;
+            }
+    
             p {
                 text-align: left;
-                font-size: 1em;
-                width: 80%;
-                line-height: 1.5em;
+                font-size: 1.1em;
+                line-height: 1.7em;
                 }
         
             .sidebar {
-                flex: 1;
+                margin: 0 auto;
+                height: 33vh;
             }
             
             .lb-content {
-                flex: 1.3;
+                position: absolute;
+                top: 40%;
+                left: 5%;
+                width: 90%;
             }
         
             img { 
-                max-width: 250px; 
-                margin: 40px 0 0 40px;
+                max-width: 400px;
+                border-radius: 20px;
+            }
+
+            .close {    
+                right: 45px;
+                top: 30px;
+                cursor: pointer;
+                font-size: 2.2em;
+                position: fixed;
+                color: snow;
+                transition: all .2s ease-in-out;
+                &:hover {
+                    cursor: pointer; transform: scale(1.5);
+                  }
             }
         }
     
     }
     
     
-    @media screen and (min-width: 900px) {
+    @media screen and (min-width: 951px) {
     
-        .lightbox { 
+        .lightbox {
             display: none;
             flex-direction: row;
-            min-height: 100vh;
-            width: 100%;
+            min-height: 90vh;
+            width: 90%;
             position: fixed;
-            top: 0;
+            top: 20px;
+            left: 30px;
             z-index: 5000;
             padding: 20px;
-            background-color: tan;
+            background-color: rgba(233, 169, 95, 0.98);
+            border-radius: 20px;
+
+            h3 {
+                text-align: left;
+                font-size: 1.2em;
+                line-height: 1.5em;
+                font-weight: bold;
+            }
         
             p {
                 text-align: left;
-                font-size: 16px;
-                width: 850px;
-                line-height: 2em;
+                font-size: 1em;
+                line-height: 1.7em;
             }
         
             .sidebar {
-                flex: 1;
-                line-height: 50vh;
+                margin: 0 auto;
+                height: 43vh;
             }
             
             .lb-content {
-                flex: 2.1;
-                padding: 80px 0;
+                position: absolute;
+                top: 50%;
+                left: 22%;
+                width: 60%;
             }
         
             img { 
-                max-width: 450px;
-                padding: 20px 0 0 20px;
-                margin: 50px 0 0 20px;
+                max-width: 520px;
+                border-radius: 20px;
             }
     
             .close {    
-                right: 40px;
-                top: 10px;
+                right: 38px;
+                top: 25px;
                 cursor: pointer;
                 font-size: 3em;
                 position: fixed;
-                font-family: 'Mali', Arial, Helvetica, sans-serif;
                 color: snow;
+                transition: all .2s ease-in-out;
+                &:hover {
+                    cursor: pointer; transform: scale(1.5);
+                  }
+            }
+        }
+    }
+
+    @media screen and (min-width: 1100px) {
+        .lightbox {
+            .close {    
+                right: 60px;
+            }
+        }
+    }
+
+    @media screen and (min-width: 1300px) {
+        .lightbox {
+            .close {    
+                right: 90px;
             }
         }
     }
