--- a/sass/modules/_work.scss
+++ b/sass/modules/_work.scss
@@ -37,6 +37,7 @@
         position: relative;
         width: 90%;
         margin: 0 auto;
+        margin-top: 40px;
         margin-bottom: 40px;
         height: auto;
         &:hover .video-controls{opacity: .6;}
